Added 2 more unit tests for serializing and deserializing Tissue Inputs Cleaned up known types in the Tissue input files and the knowntypes file
--HG--
branch : mono-compatibility

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -210,8 +210,14 @@
     <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\IsotropicPointSourceInputTests.cs">
       <Link>MonteCarlo\DataStructures\SourceInputs\PointSourceInputs\IsotropicPointSourceInputTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\TissueInputs\MultiEllipsoidTissueInputTests.cs">
+      <Link>MonteCarlo\DataStructures\TissueInputs\MultiEllipsoidTissueInputTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\TissueInputs\MultiLayerTissueInputTests.cs">
       <Link>MonteCarlo\DataStructures\TissueInputs\MultiLayerTissueInputTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\MonteCarlo\DataStructures\TissueInputs\SingleEllipsoidTissueInputTests.cs">
+      <Link>MonteCarlo\DataStructures\TissueInputs\SingleEllipsoidTissueInputTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\MonteCarlo\Detectors\AnalogOneLayerDetectorsTests.cs">
       <Link>MonteCarlo\Detectors\AnalogOneLayerDetectorsTests.cs</Link>
