--- a/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
+++ b/src/Vts.MonteCarlo.CommandLineApplication/Vts.MonteCarlo.CommandLineApplication.csproj
@@ -155,6 +155,11 @@
 IF NOT EXIST "$(ProjectDir)..\..\build\apps\mc\$(ConfigurationName)" mkdir "$(ProjectDir)..\..\build\apps\mc\$(ConfigurationName)"
 copy "$(TargetDir)\*.*" "$(ProjectDir)..\..\build\apps\mc\$(ConfigurationName)" /y
 
+IF NOT EXIST "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries" mkdir "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries"
+copy "$(TargetDir)\*.exe" "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries" /y
+copy "$(TargetDir)\*.dll" "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries" /y
+copy "$(TargetDir)\*.config" "$(ProjectDir)..\..\matlab\vts_wrapper\vts_libraries" /y
+
 "$(TargetDir)mc.exe" geninfiles
 </PostBuildEvent>
   </PropertyGroup>
