--- a/src/Vts.SiteVisit.Test/Vts.SiteVisit.Test.csproj
+++ b/src/Vts.SiteVisit.Test/Vts.SiteVisit.Test.csproj
@@ -76,9 +76,9 @@
     <DocumentationFile>Bin\Release\Vts.SiteVisit.Test.XML</DocumentationFile>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release %28White List Gui Deployment%29|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'ReleaseWhiteList|AnyCPU' ">
     <OutputPath>bin\Release %28White List Gui Deployment%29\</OutputPath>
-    <DefineConstants>TRACE;SILVERLIGHT</DefineConstants>
+    <DefineConstants>TRACE;SILVERLIGHT, WHITELIST</DefineConstants>
     <DocumentationFile>Bin\Release\Vts.SiteVisit.Test.XML</DocumentationFile>
     <Optimize>true</Optimize>
     <NoStdLib>true</NoStdLib>
