--- a/src/Vts.SiteVisit/Vts.SiteVisit.csproj
+++ b/src/Vts.SiteVisit/Vts.SiteVisit.csproj
@@ -86,7 +86,7 @@
     <DocumentationFile>Bin\Release\Vts.SiteVisit.XML</DocumentationFile>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release %28White List Gui Deployment%29|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'ReleaseWhiteList|AnyCPU' ">
     <OutputPath>bin\Release %28White List Gui Deployment%29\</OutputPath>
     <DefineConstants>TRACE;SILVERLIGHT, WHITELIST</DefineConstants>
     <DocumentationFile>Bin\Release\Vts.SiteVisit.XML</DocumentationFile>
