Finished MieScatterer.cs.  Structural changes to LookupTablePhaseFunction.cs to allow for Unit Testing.  Unit test for LookupTablePhaseFunction.cs.  Added a function that allows for trapezoid integration for two lists of doubles.  LookupTablePhaseFunctionInputTest and PolarLookupTablePhaseFunctionData.cs currently unfinished.
--HG--
branch : jn-111104-lookup_phase_function

--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -241,6 +241,9 @@
     <Compile Include="MonteCarlo\DataStructures\OutputTests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MonteCarlo\DataStructures\PhaseFunctionInputs\LookupTablePhaseFunctionInputTest.cs" />
+    <Compile Include="MonteCarlo\DataStructures\PhaseFunctionInputs\PolarLookupTablePhaseFunctionDataTest.cs" />
+    <Compile Include="MonteCarlo\PhaseFunctions\LookupTablePhaseFunctionTests.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationInputExtensionsTests.cs">
       <SubType>Code</SubType>
     </Compile>
