Modifications to add 2 dMC detectors to code: dMCdROfRhodMua and dMCdROfRhodMus. These provide dR(rho)/dMua and dR(rho)/dMus estimates.

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -545,6 +545,12 @@
     <Compile Include="..\Vts\MonteCarlo\DataStructures\DetectorInputs\ATotalDetectorInput.cs">
       <Link>MonteCarlo\DataStructures\DetectorInputs\ATotalDetectorInput.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\DataStructures\DetectorInputs\dMCdROfRhodMuaDetectorInput.cs">
+      <Link>MonteCarlo\DataStructures\DetectorInputs\dMCdROfRhodMuaDetectorInput.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\DataStructures\DetectorInputs\dMCdROfRhodMusDetectorInput.cs">
+      <Link>MonteCarlo\DataStructures\DetectorInputs\dMCdROfRhodMusDetectorInput.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\DataStructures\DetectorInputs\FluenceOfRhoAndZAndTimeDetectorInput.cs">
       <Link>MonteCarlo\DataStructures\DetectorInputs\FluenceOfRhoAndZAndTimeDetectorInput.cs</Link>
     </Compile>
