GUI: modified forward solver and inverse solver panels to plot phase and amplitude rather than real and imag. Added Convert class in Vts.Common.Math that converts scalar and vector real and imag ToPhase and ToAmplitude.  Wrote unit test to verify results of this class.

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -111,6 +111,9 @@
     <Compile Include="..\Vts.Test\Common\Helpers\Range\UintRangeTests.cs">
       <Link>Common\Helpers\Range\UintRangeTests.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\Common\Math\ConvertTests.cs">
+      <Link>Common\Math\ConvertTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\Common\Math\Convolution2DTests.cs">
       <Link>Common\Math\Convolution2DTests.cs</Link>
     </Compile>
