Updated Unity assemblies to 2.1. Long-term, we need to figure out how to make Vts.dll consumers to be less dependent on versioning. See IL weaving comment by Jørn Schou-Rode here: http://stackoverflow.com/questions/2460542/using-different-versions-of-the-same-assembly-in-the-same-folder#2461746

--- a/src/Vts.ImportSpectralData.Desktop/Vts.ImportSpectralData.Desktop.csproj
+++ b/src/Vts.ImportSpectralData.Desktop/Vts.ImportSpectralData.Desktop.csproj
@@ -30,6 +30,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Import.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
