--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -289,6 +289,8 @@
     <Compile Include="MonteCarlo\Interfaces\IVirtualBoundary.cs" />
     <Compile Include="MonteCarlo\Extensions\PhotonDataExtensionMethods.cs" />
     <Compile Include="MonteCarlo\PhaseFunctions\BidirectionalPhaseFunction.cs" />
+    <Compile Include="MonteCarlo\PhaseFunctions\AxiallySymmetricScattererMuellerMatrix.cs" />
+    <Compile Include="MonteCarlo\PhaseFunctions\MieScattererMuellerMatrix.cs" />
     <Compile Include="MonteCarlo\PhaseFunctions\MuellerMatrix.cs" />
     <Compile Include="MonteCarlo\PhaseFunctions\StokesVector.cs" />
     <Compile Include="MonteCarlo\PhaseFunctions\RejectionSampledLookupTablePhaseFunction.cs" />
