--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -73,6 +73,9 @@
     <Reference Include="Microsoft.Practices.Unity.Configuration">
       <HintPath>..\packages\Unity.2.1.505.2\lib\NET35\Microsoft.Practices.Unity.Configuration.dll</HintPath>
     </Reference>
+    <Reference Include="MPFitLib">
+      <HintPath>..\packages\csmpfit.1.0.0\lib\net35\MPFitLib.dll</HintPath>
+    </Reference>
     <Reference Include="NLog">
       <HintPath>..\..\lib\NLog\NET40\NLog.dll</HintPath>
     </Reference>
@@ -113,9 +116,6 @@
     </Reference>
     <Reference Include="Meta.Numerics">
       <HintPath>..\..\lib\Meta.Numerics\build\Desktop\Meta.Numerics.dll</HintPath>
-    </Reference>
-    <Reference Include="MPFitLib">
-      <HintPath>..\..\lib\mpfit\build\Desktop\MPFitLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
