--- a/src/Vts.Desktop/packages.config
+++ b/src/Vts.Desktop/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
+  <package id="csmpfit" version="1.0.0" targetFramework="net40" />
   <package id="DotNetZip" version="1.9.1.8" targetFramework="net40" />
   <package id="Rx-Core" version="2.1.30214.0" targetFramework="net40" />
   <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="net40" />
