--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -105,9 +105,8 @@
     <Reference Include="Microsoft.Practices.Unity.Silverlight">
       <HintPath>..\packages\Unity.2.1.505.2\lib\SL30\Microsoft.Practices.Unity.Silverlight.dll</HintPath>
     </Reference>
-    <Reference Include="MPFitLib, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\mpfit\build\Silverlight\MPFitLib.dll</HintPath>
+    <Reference Include="MPFitLib">
+      <HintPath>..\packages\csmpfit.1.0.0\lib\sl50\MPFitLib.dll</HintPath>
     </Reference>
     <Reference Include="NLog">
       <HintPath>..\..\lib\NLog\SL4\NLog.dll</HintPath>
