wrote unit tests for the following classes - PolarLookupTablePhaseFunctionData, LookupTablePhaseFunctionInput, AxiallySymmetricScattererMuellerMatrix, MieScattererMuellerMatrix. Still need to work on unit tests for PolarLookupTablePhaseFunction, RejectionSampledLookupTablePhaseFunction, and StokesVector.
--HG--
branch : jn-111104-lookup_phase_function

--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -241,7 +241,9 @@
     <Compile Include="MonteCarlo\DataStructures\OutputTests.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="MonteCarlo\DataStructures\PhaseFunctionInputs\LookupTablePhaseFunctionInputTests.cs" />
     <Compile Include="MonteCarlo\DataStructures\PhaseFunctionInputs\PolarLookupTablePhaseFunctionDataTest.cs" />
+    <Compile Include="MonteCarlo\PhaseFunctions\AxiallySymmetricScattererMuellerMatrixTests.cs" />
     <Compile Include="MonteCarlo\PhaseFunctions\LookupTablePhaseFunctionTests.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationInputExtensionsTests.cs">
       <SubType>Code</SubType>
@@ -281,6 +283,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="MonteCarlo\MonteCarloSimulationTests.cs" />
+    <Compile Include="MonteCarlo\PhaseFunctions\MieScattererMuellerMatrixTests.cs" />
+    <Compile Include="MonteCarlo\PhaseFunctions\RejectionSampledLookupTablePhaseFunctionTests.cs" />
+    <Compile Include="MonteCarlo\PhaseFunctions\StokesVectorTests.cs" />
     <Compile Include="MonteCarlo\PhotonData\CollisionInfoDatabaseTests.cs">
       <SubType>Code</SubType>
     </Compile>
