--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\Vts.Desktop\packages.config" />
   <repository path="..\Vts.Gui.Silverlight\packages.config" />
+  <repository path="..\Vts.MonteCarlo.CommandLineApplication\packages.config" />
   <repository path="..\Vts\packages.config" />
 </repositories>
