--- a/src/Vts/packages.config
+++ b/src/Vts/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.0" targetFramework="sl50" />
   <package id="csmpfit" version="1.0.0" targetFramework="sl50" />
+  <package id="NLog" version="2.0.0.2000" targetFramework="sl50" />
   <package id="Rx-Core" version="2.1.30214.0" targetFramework="sl50" />
   <package id="Rx-Interfaces" version="2.1.30214.0" targetFramework="sl50" />
   <package id="Rx-Linq" version="2.1.30214.0" targetFramework="sl50" />
